<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dubhacks.android.sasr.burrow.RegisterHome">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_register"
        android:id="@+id/home_register_button"
        android:layout_below="@+id/share"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_name"
        android:text="@string/home_register_name"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/connect_home_text"
        android:layout_alignEnd="@+id/connect_home_text"
        android:layout_marginRight="15dp"
        android:layout_marginTop="26dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SHARE"
        android:id="@+id/share"
        android:layout_below="@+id/home_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/connect_home_text"
        android:layout_marginTop="43dp"
        android:hint="@string/connect_home_name"
        android:layout_below="@+id/home_register_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_to_home_by_name"
        android:id="@+id/connect_to_home_by_name"
        android:layout_below="@+id/connect_home_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
